# agent-service

./: .env.example  .gitignore  Dockerfile  README.md  agent-service.http  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
deploy/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py
scripts/: ask.py  build_image.sh
src/: agent.py  main.py  mcp_client.py  secrets.py
tests/: test_agent.py
